--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <section> <div id="legend"> 
     <h2>Vienna Urban Forest</h2>
-    <p>Let's write something about our data findings!</p>
+    <p>Multivatiate Visualizations!</p>
     <br>My <span class="finding-1">first finding</span> is that &#127797; 
     <br>My <span class="finding-2">second finding</span> is &#127794;
    </div> 
